--- a/style/container.css
+++ b/style/container.css
@@ -10,7 +10,7 @@
     background-color: white;
     margin: 3px;
     padding: 15px;
-    max-height: 70px;
+
 }
 
 .containers {
@@ -32,6 +32,7 @@
     background-color: teal;
     color: white;
     border: none;
+    width: 100%;
     padding: 10px;
 }
 
@@ -43,6 +44,6 @@
 
 @media (max-width: 767px) {
     .container__form {
-        grid-template-columns: 1fr auto;
+        grid-template-columns: 1fr;
     }
 }
